# server

./: .ansible-lint  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  CLAUDE.md  PLANS.md  README.md  README.txt  TODO.txt  ansible.cfg  credentials  prek.toml  pyproject.toml  renovate.json
.claude/: settings.json  statusline.sh
.claude/agent-memory/home-assistant-engineer/: MEMORY.md  ha-clear-notification-pattern.md  ha-fixes-2026-07-04.md  ha-review-2026-06-27-findings.md  ha-review-2026-07-01-findings.md  ha-review-2026-07-02-findings.md  ha-review-2026-07-04-findings.md  ha-ups-replace-battery.md
.claude/agents/: code-reviewer.md  home-assistant-engineer.md  homelab-backup-observability-reviewer.md  homelab-cicd-reviewer.md  homelab-container-reviewer.md  homelab-docs-freshness-reviewer.md  homelab-network-diagnostician.md  security-review.md
.claude/commands/: git-pr.md  review.md
.claude/hooks/: _hook_common.py  ansible-lint.sh  auto-approve-readonly.py  auto-approve-readonly.sh  block-containers-edit.py  block-containers-edit.sh  block-protected-edits.py  block-protected-edits.sh  log-instructions.py  log-instructions.sh  log-permission.py  log-permission.sh  session-health.py  session-health.sh  test_auto_approve_readonly.py  test_block_containers_edit.py  test_block_protected_edits.py  test_log_permission.py  test_session_health.py  validate-compose.sh
.claude/rules/: ansible.md  docker.md  secrets.md
.claude/scripts/: audit-permissions.py  test_audit_permissions.py  test_setup_wiring.py
.claude/skills/add-secret/: SKILL.md
.claude/skills/audit-permissions/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/ha-deploy/: SKILL.md
.claude/skills/ha-edit-automation/: SKILL.md
.claude/skills/ha-review/: SKILL.md
.claude/skills/ha-verify-state/: SKILL.md
.claude/skills/homelab-review/: SKILL.md
.claude/skills/new-container/: SKILL.md
.claude/skills/security-review/: DETAILED_GUIDE.md  SKILL.md
.claude/skills/z2m-device-setting/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  image-smoke.yml
ansible/: .ansible-lint  .sops.yaml  PLANS.md  README.md  README.txt  ansible.cfg  bootstrap.yml  bring-up.sh  deploy.yml  dns.yml  docker.yml  git.yml  initial_setup.sh  initial_setup.yml  install_ansible.sh  pi-deploy.yml  playbook.yml  requirements.yml  secret_rotation.yml  setup-docker.yml  test.yml
ansible/filter_plugins/: toposort.py
ansible/inventory/: hosts.ini
ansible/inventory/group_vars/: all.yml
ansible/inventory/host_vars/: daniel-pi.yml  daniel-server.yml
ansible/playbooks/: deploy.yml  git.yml  pi-deploy.yml  setup-docker.yml
ansible/playbooks/setup/: config_files.yml  docker_install.yml
ansible/pre_tasks/: load_secrets.yml
ansible/setup/pi/: initial_setup.sh  initial_setup.yml
ansible/setup/server/: initial_setup.yml
ansible/tasks/: directory.yml  docker.yml
ansible/templates/: autokuma.yml.j2  expose.yml.j2  healthcheck.yml.j2  networks.yml.j2  resources.yml.j2  traefik.yml.j2
ansible/tests/: conftest.py  test_host_scripts_py312.py  test_ical_proxy_pins_match_uv_lock.py  test_network_invariant.py  test_prek_pytest_files_cover_testpaths.py  test_python_version_consistency.py  test_toposort.py
ansible/vars/: secrets.yml
docs/: Inventory.txt  README-PI.txt  README.txt  READNE-PI.txt  happy-selfhost-spec.md  home-assistant-review-2026-06-19.md  kopia-disaster-recovery.md  secret-rotation.md  security-tools.md  ubuntu-24.04-upgrade.md  wireguard-private-homelab-access.md
docs/superpowers/plans/: 2026-06-07-pi-stack-host-agnostic-roles.md  2026-06-07-python-uv-test-env.md  2026-06-07-renovate-cicd-pipeline.md  2026-06-08-n8n-prod-workflow-monitor.md  2026-06-19-tap-dial-report.md  (+29 more)
evals/: README.md  test_eval_cases.py  test_trend.py  trend.py
scripts/: _render_guard.py  claude-remote-control.sh  export_grafana_dashboards.py  fetch_grafana_dashboards.py  ha_state_model.py  probe.py  secret_rotation.py  smoke_extract.py  test_export_grafana_dashboards.py  test_ha_state_model.py  test_prek_pytest_paths.py  test_probe.py  test_push_monitor_retries.py  test_renovate_managers.py  test_secret_rotation.py  test_smoke_extract.py  test_validate_compose_templates.py  test_validate_config_templates.py  test_validate_grafana_dashboards.py  test_validate_ha_config.py  test_validate_shell_templates.py  validate_compose_templates.py  validate_config_templates.py  validate_grafana_dashboards.py  validate_ha_config.py  validate_shell_templates.py
scripts/availability_bots/: .env.example  README.md  common.py  glenstone-bot.py  osteria-francescana-bot.py  test_availability_bots.py
(+780 files in other folders)
