[project]
name = "server-homelab"
version = "0.0.0"
requires-python = ">=3.13"

[tool.uv]
package = false                      # virtual project: manage deps/lock, do not build the repo

[dependency-groups]
dev = [                              # `dev` is uv's default group for `uv run`/`uv sync`
  "pytest>=8",
  "ansible-core>=2.18",             # test_toposort imports ansible.errors
  "pyyaml",                         # validate_compose_templates
  "jinja2>=3",                      # validate_compose_templates
]

[tool.pytest.ini_options]
testpaths = [                        # single source of truth for WHAT runs; excludes vendored
  "ansible/tests",                   # ansible/collections/** third-party tests
  "ansible/roles/containers/monitor-bridge/files",
  ".claude/hooks",
  "scripts",                         # closes the smoke_extract CI gap
]
addopts = "-q"
pythonpath = ["ansible/filter_plugins"]   # lets test_toposort import toposort (replaces conftest.py)
