[project]
name = "server-homelab"
version = "0.0.0"
requires-python = ">=3.14"

[tool.uv]
package = false                      # virtual project: manage deps/lock, do not build the repo

[dependency-groups]
dev = [                              # `dev` is uv's default group for `uv run`/`uv sync`
  "pytest>=8",
  "ansible-core>=2.18",             # test_toposort imports ansible.errors; also runs deploys via `uv run ansible-playbook`
  "pyyaml",                         # validate_compose_templates
  "jinja2>=3",                      # validate_compose_templates
  "requests",                       # community.docker modules (docker_container_info dependency check)
  "docker",                         # community.docker SDK-backed modules
]

[tool.pytest.ini_options]
testpaths = [                        # single source of truth for WHAT runs; excludes vendored
  "ansible/tests",                   # ansible/collections/** third-party tests
  "ansible/roles/containers/monitor-bridge/files",
  "ansible/roles/containers/terraria-stats/files",
  ".claude/hooks",
  "scripts",                         # closes the smoke_extract CI gap
  "ansible/roles/setup/gitops_deploy/files",   # deploy_logic decision tests
]
addopts = "-q"
pythonpath = ["ansible/filter_plugins"]   # lets test_toposort import toposort (replaces conftest.py)
