[project]
name = "server-homelab"
version = "0.0.0"
requires-python = ">=3.14"

[tool.uv]
package = false                      # virtual project: manage deps/lock, do not build the repo

[dependency-groups]
dev = [                              # `dev` is uv's default group for `uv run`/`uv sync`
  "pytest>=8",
  "ansible-core>=2.18",             # test_toposort imports ansible.errors; also runs deploys via `uv run ansible-playbook`
  "pyyaml",                         # validate_compose_templates
  "jinja2>=3",                      # validate_compose_templates
  "requests",                       # community.docker modules (docker_container_info dependency check)
  "docker",                         # community.docker SDK-backed modules
  "ruff>=0.10",                     # first-party Python lint gate (prek hook); pinned via uv.lock
  "shellcheck-py==0.11.0.1",        # validate_shell_templates; pinned to match prek.toml's shellcheck-py rev
]

[tool.pytest.ini_options]
testpaths = [                        # single source of truth for WHAT runs; excludes vendored
  "ansible/tests",                   # ansible/collections/** third-party tests
  "ansible/roles/containers/monitor-bridge/files",
  "ansible/roles/containers/terraria-stats/files",
  ".claude/hooks",
  ".claude/scripts",                 # audit-permissions report/suggester logic tests
  "scripts",                         # closes the smoke_extract CI gap
  "ansible/roles/setup/gitops_deploy/files",   # deploy_logic decision tests
  "ansible/roles/setup/renovate_notify/files", # notifier decision tests
  "ansible/roles/containers/home-assistant/tests", # HA Jinja macro logic tests
]
addopts = "-q"
pythonpath = ["ansible/filter_plugins"]   # lets test_toposort import toposort (replaces conftest.py)

[tool.ruff]
extend-exclude = ["ansible/collections"]  # never lint or format the vendored third-party collections

[tool.ruff.lint]
# Bug-catching rules only — pyflakes F (unused imports, undefined names, f-string bugs),
# syntax errors E9, bare-except E722, and ==None/==True comparisons E711/E712. Stylistic
# checks (E7 one-liners, ambiguous names) stay OFF — formatting is owned by `ruff format`.
select = ["F", "E9", "E711", "E712", "E722"]
